src/front-end/css/doe/timer.module.scss
@import "../defs";

.container {
  padding: 40px 25px 34px;
  text-align: center;
  overflow: hidden;
  position: relative;
  background: white;
  margin-bottom: 24px;
  // background: url("../../images/doe/MainBG.svg");
  // background-size: 400px auto;

  > h1 {
    @include title();
    backdrop-filter: blur(0px);
    margin-bottom: -18px;
  }

  > h2 {
    @include header1();
    font-size: 17px;
    backdrop-filter: blur(0px);
    word-spacing: 0px;
    margin-bottom: 22px;
  }
}

.mobileBG {
  position: absolute;
  top: -100px;
  left: -100px;
  width: 500px;
}

.mlhBanner,
.topCloud,
.rightCloud,
.leftCloud,
.chicky,
.cowBalloon,
.froggy {
  display: none;
}

.timeBoxContainer {
  display: flex;
  justify-content: center;
  gap: 0 10px;
  margin-bottom: 262px;
}

.timeBox {
  max-width: 75vw;
  background: rgba(158, 231, 229, 0.2);
  backdrop-filter: blur(8px);
  border-radius: 10px;
  margin-bottom: 24px;
  padding: 12px 18px 8px;

  > p {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 800;
    font-size: 13px;
    line-height: 16px;
    text-align: center;
    letter-spacing: 0.05em;
    color: white;
    margin-bottom: 3px;
    backdrop-filter: blur(0px);
  }

  > span {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 400;
    font-size: 42px;
    line-height: 51px;
    text-align: center;
    color: white;
    text-shadow: 0px 4px 24px rgba(16, 49, 75, 0.1);
    backdrop-filter: blur(0px);
  }
}

.buttons {
  margin-bottom: 26px;
  backdrop-filter: blur(0px);
}

.discordWhite {
  display: none;
}

.submitButton {
  display: block;
  text-decoration: none;
  margin-bottom: 10px;

  > button {
    padding: 10px 24px;
    background: #136e90;
    border-radius: 100px;
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 700;
    font-size: 17px;
    line-height: 21px;

    letter-spacing: 0.1em;
    border: #136e90;

    color: #ffffff;
    backdrop-filter: blur(0px);
    text-decoration: none;
  }
}

.helpButton {
  display: block;
  text-decoration: none;
  margin-bottom: 10px;

  > button {
    padding: 7px 24px;
    background: white;
    border-radius: 100px;
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 700;
    font-size: 17px;
    line-height: 21px;

    letter-spacing: 0.1em;
    border: 2px solid #136e90;
    color: #136e90;
    backdrop-filter: blur(0px);
    //@include button(true);
    > img {
      width: 20px;
      margin-right: 10px;
    }
  }
}

.arrowWhite {
  display: none;
}

.footer {
  font-family: "Proxima Nova";
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: 0.02em;
  color: #136e90;
  backdrop-filter: blur(0px);
  text-align: left;
  width: 80%;
  margin: auto;

  > a {
    text-decoration: none;
    font-family: "Proxima Nova";
    font-weight: 700;
    font-size: 16px;
    line-height: 19px;
    letter-spacing: 0.02em;
    color: #136e90;
    backdrop-filter: blur(0px);
  }
}

.arrow {
  width: 14px;
  backdrop-filter: blur(0px);
}

@media (min-width: 992px) {
  .mobileBG {
    display: none;
  }

  .container {
    max-height: 686px;
    padding: 100px 0px 112px;
    position: relative;
    overflow: visible;
    background: linear-gradient(140.82deg, #c5eddb 3.87%, #5bcde8 56.65%);

    > h2 {
      font-size: 19px;
      margin-bottom: 45px;
    }
  }

  .froggy,
  .chicky,
  .cowBalloon,
  .mlhBanner,
  .topCloud,
  .rightCloud,
  .leftCloud {
    position: absolute;
    display: block;
  }

  .froggy {
    left: 0;
    bottom: 0;
    width: 550px;
  }

  .cowBalloon {
    bottom: 0;
    right: 0;
    width: 515px;
  }

  .chicky {
    width: 60px;
    left: 30%;
    top: 5%;
  }

  .mlhBanner {
    width: 105px;
    left: 35px;
    top: 0;
  }

  .leftCloud {
    bottom: 0;
    max-width: 1097px;
  }

  .rightCloud {
    top: -70px;
    right: 0;
  }

  .timeBoxContainer {
    margin-inline: auto;
    max-width: 706px;
    margin-bottom: 50px;
    gap: 0 24px;
  }

  .timeBox {
    padding: 32px 51px 2px;
    margin-bottom: 0;
    border-radius: 20px;
    background: rgba(18, 168, 177, 0.2);
    backdrop-filter: blur(30px);

    > p {
      font-weight: 800;
      font-size: 24px;
      line-height: 29px;
      margin-bottom: 24px;
    }

    > span {
      font-size: 104px;
      line-height: 127px;
    }
  }

  .buttons {
    display: flex;
    max-width: 356px;
    margin: auto;
    justify-content: space-between;
    gap: 0 24px;
    margin-bottom: 19px;
  }

  .discordBlue {
    display: none;
  }

  .discordWhite {
    display: inline;
  }

  .submitButton {
    width: 212px;
    margin: 0;

    > button {
      color: #5bcde8;
      width: 100%;
      background: white;
      padding: 11px 0;
    }
  }

  .helpButton {
    width: 119px;
    margin: 0;

    > button {
      color: white;
      background: #77dce4;
      border: 3px solid white;
      padding: 8px 10px;
    }
  }

  .arrowBlue {
    display: none;
  }

  .arrowWhite {
    display: inline;
  }

  .footer {
    margin-top: 19px;
    color: white;
    text-align: center;

    > br {
      display: none;
    }

    > a {
      display: inline;
      color: white;
      border-bottom: 2px solid transparent;
      transition: border-bottom 250ms ease-in-out;
      padding-bottom: 5px;

      &:hover {
        border-bottom-color: white;
        transition: border-bottom 250ms ease-in-out;
      }
    }
  }
}

@media (min-width: 1280px) {
  .froggy {
    z-index: 5;
  }
}

